--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - CodeLearn</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="../css/shared.css">
+    <link rel="stylesheet" href="../css/about.css">
+    <link rel="icon" type="image/svg+xml" href="../assets/javascript.svg" />
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -69,16 +70,7 @@
                         project-based approach ensures students gain both theoretical knowledge and practical skills.
                     </p>
                 </div>
-                <div class="about-image">
-                    <div class="image-placeholder">
-                        <div class="team-illustration">
-                            <div class="person person-1"></div>
-                            <div class="person person-2"></div>
-                            <div class="person person-3"></div>
-                        </div>
-                        <p class="image-caption">Our diverse team of experts</p>
-                    </div>
-                </div>
+          
             </div>
         </div>
     </section>
@@ -165,6 +157,10 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- JavaScript Files -->
+    <script src="../js/validation.js"></script>
+    <script src="../js/menu.js"></script>
+    <script src="../js/ui.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
