--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeLearn - Programming Courses Platform</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="../css/shared.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="icon" type="image/svg+xml" href="../assets/javascript.svg" />
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -48,15 +49,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <!-- Placeholder for hero image -->
-                <div class="hero-placeholder">
-                    <div class="code-animation">
-                        <div class="code-line"></div>
-                        <div class="code-line"></div>
-                        <div class="code-line"></div>
-                        <div class="code-line"></div>
-                    </div>
-                </div>
+                <img src="../assets/undraw_learning-sketchingsh.svg" alt="Learning Sketch Illustration" class="hero-illustration">
             </div>
         </div>
     </section>
@@ -121,6 +114,10 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- JavaScript Files -->
+    <script src="../js/validation.js"></script>
+    <script src="../js/menu.js"></script>
+    <script src="../js/ui.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
