--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - CodeLearn</title>
-    <link rel="stylesheet" href="../css/shared.css">
-    <link rel="stylesheet" href="../css/contact.css">
-    <link rel="icon" type="image/svg+xml" href="../assets/javascript.svg" />
+    <link rel="stylesheet" href="/css/shared.css">
+    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="icon" type="image/svg+xml" href="/assets/javascript.svg" />
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -200,9 +200,9 @@
     </footer>
 
     <!-- JavaScript Files -->
-    <script src="../js/validation.js"></script>
-    <script src="../js/menu.js"></script>
-    <script src="../js/ui.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/js/validation.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
