--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeLearn - Programming Courses Platform</title>
-    <link rel="stylesheet" href="../css/shared.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="icon" type="image/svg+xml" href="../assets/javascript.svg" />
+    <link rel="stylesheet" href="/css/shared.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="icon" type="image/svg+xml" href="/assets/javascript.svg" />
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="../assets/undraw_learning-sketchingsh.svg" alt="Learning Sketch Illustration" class="hero-illustration">
+                <img src="/assets/undraw_learning-sketchingsh.svg" alt="Learning Sketch Illustration" class="hero-illustration">
             </div>
         </div>
     </section>
@@ -115,9 +115,9 @@
     </footer>
 
     <!-- JavaScript Files -->
-    <script src="../js/validation.js"></script>
-    <script src="../js/menu.js"></script>
-    <script src="../js/ui.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/js/validation.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
